fix mobile header overflow by switching from vh to px

--- a/styles/design-system/components/header.css
+++ b/styles/design-system/components/header.css
@@ -1,6 +1,6 @@
 header {
+  --header-height: 96px;
   width: 100%;
-  --header-height: 10.4svh;
   background: var(--color-bg-light);
   position: fixed;
   top: 0;
@@ -14,7 +14,7 @@ header {
 }
 
 .expanded {
-  height: calc(var(--header-height) * 3.7);
+  height: 356px;
 }
 
 .header-top {
